# Llama3-Domain-Specific-FineTuning

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  app.py  check_project.py  docker-compose.yml  main.py  project_phases.md  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_demo.py
configs/: config.yaml  inference_config.yaml  monitoring_config.yaml  train_config.yaml  training_config.yaml
evaluation/: evaluate.py
notebooks/: Fine_tuning.ipynb
src/: app.py  data_prep.py  inference.py  train.py  utils.py
src/data_pipeline/: formatter.py  ingestion.py  pii_masker.py  validator.py
src/inference/: api.py
