[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama3-financial-analyst"
version = "0.1.0"
description = "Domain-specific fine-tuning of Llama-3 for Financial Analysis using QLoRA"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shivam Nayak" }]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "datasets>=2.20.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "bitsandbytes>=0.43.0",
    "trl>=0.9.0",

    # Data
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # Inference API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",

    # Monitoring
    "prometheus-client>=0.20.0",
    "mlflow>=2.14.0",
    "wandb>=0.17.0",

    # Experiment tracking
    "optuna>=3.6.0",

    # Evaluation
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    "bert-score>=0.3.13",

    # Utilities
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/data_pipeline", "src/training", "src/evaluation", "src/inference", "src/monitoring"]
